# OpenRLHF

./: pyproject.toml
openrlhf/trainer/: sft_trainer.py
